feat: add bruno api collection, swagger doc, remote server support with ssh
